--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,64 @@
+aiohttp==3.8.6
+aioredis==1.3.1
+aiosignal==1.3.1
+anyio==4.4.0
 asgiref==3.4.1
+async-timeout==4.0.3
+attrs==24.2.0
+autobahn==24.4.2
+Automat==24.8.0
+certifi==2024.7.4
+cffi==1.17.0
 channels==3.0.3
 channels-redis==3.3.0
+charset-normalizer==3.3.2
+click==8.1.7
+constantly==23.10.4
+cryptography==43.0.0
+daphne==3.0.2
 Django==3.2.23
 django-cors-headers==4.2.0
 django-impersonate==1.7.3
 django-mathfilters==1.0.0
 django-ratelimit==3.0.1
 django-redis==5.0.0
+exceptiongroup==1.2.2
+frozenlist==1.4.1
 gevent==23.9.1
 greenlet==3.0.0
 gunicorn==20.1.0
+h11==0.14.0
+hiredis==3.0.0
+httptools==0.6.1
+hyperlink==21.0.0
+idna==3.7
+incremental==24.7.2
 Markdown==3.3.4
+msgpack==1.0.8
+multidict==6.0.5
 py-cord==2.4.1
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
+pyOpenSSL==24.2.1
+python-dotenv==1.0.1
+pytz==2024.1
+PyYAML==6.0.2
+redis==5.0.8
 requests==2.31.0
+service-identity==24.1.0
+sniffio==1.3.1
+sqlparse==0.5.1
+tomli==2.0.1
 Twisted==23.10.0
-uvicorn[standard]==0.23.2
+txaio==23.1.1
+typing_extensions==4.12.2
+urllib3==2.2.2
+uvicorn==0.23.2
+uvloop==0.20.0
+watchfiles==0.23.0
+websockets==12.0
+whitenoise==6.4.0
+yarl==1.9.4
+zope.event==5.0
+zope.interface==7.0.1
